# Learn_QtDirectX12

./: CMakeLists.txt  README.md
QtDirectX12/: CMakeLists.txt  d3dx12.h  directx12_main_window.cpp  directx12_main_window.h  directx12_qt_gui.cpp  directx12_widget.cpp  directx12_widget.h  format_string.hpp
QtDirectX12/ui/: DirectX12MainWindow.ui
